--- a/LendasDoBlues/settings.gradle
+++ b/LendasDoBlues/settings.gradle
@@ -12,5 +12,5 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
-rootProject.name = "UsandoRecyclerView"
+rootProject.name = "LendasDoBlues"
 include ':app'
